fix overflow breaking layout

--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,7 @@ body {
   background: #1e2222;
   font-size: 1.3rem;
   font-weight: 400;
+  overflow-x: hidden;
 }
 button { outline: none; }
 
